// {C} Copyright 2017 Pensando Systems Inc. All rights reserved.

syntax = "proto3";
// Service name
package cluster;

import "google/api/annotations.proto";
import  public "github.com/pensando/sw/venice/utils/apigen/annotations/includes.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/pensando/sw/api/meta.proto";
import "cmd.proto";
import "tenant.proto";

//-------------------------------- R E S T / g R P C  A P I ----------------------------------------------------

service ClusterV1 {
    // Prefix for all resources served by this service.
    option (venice.apiPrefix) = "cluster";
    // API Version.
    option (venice.apiVersion) = "v1";

    option(venice.apiGrpcCrudService) = "Cluster";
    option(venice.apiGrpcCrudService) = "Node";
    option(venice.apiGrpcCrudService) = "SmartNIC";
    option (venice.apiGrpcCrudService) = "Tenant";

    option(venice.apiRestService) = {
        Object: "Cluster"
        Method: ["put", "get", "delete", "list"]
    };

    option(venice.apiRestService) = {
        Object: "Node"
        Method: ["put", "get", "delete", "post", "list"]
    };

    option(venice.apiRestService) = {
        Object: "SmartNIC"
        Method: ["put", "get", "delete", "post", "list"]
    };

    option (venice.apiRestService) = {
        Object: "Tenant"
        Method: [ "get", "put", "delete", "post", "list" ]
    };
}
